# ice_pick

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
docs/: requirements.txt
docs/source/: conf.py
docs/source/notebooks/: how_to_guide.ipynb  tutorial.ipynb
src/ice_pick/: __init__.py  account_object.py  extension.py  filter.py  filters.py  privileges.py  schema_object.py  utils.py  version.py
src/ice_pick/connection/: connector.py  snowpark.py
tests/connection/: test_connection.py
tests/unit/: test_account_object.py  test_extension.py  test_schema_object.py
