[metadata]
name = "snowflake_ice_pick"
description = snowflake_ice_pick: snowflake metadata utils library
long_description = file: README.md
long_description_content_type = text/x-md
url = https://docs.pytest.org/en/latest/
author = Preston Blackburn
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords = snowflake, metadata, utils
projec_urls = 
    Source=https://github.com/pytest-dev/pytest
    Tracker=https://github.com/pytest-dev/pytest/issues


[options]
packages = find:



[options.entry_points]



[options.extras_require]



[options.package_data]



[build_sphinx]




[check-manifest]




[devpi:upload]
formats = sdist.tgz,bdist_wheel




[mypy]
mypy_path = src
check_untyped_defs = True
disallow_any_generics = True
ignore_missing_imports = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
no_implicit_reexport = True






