[metadata]
name = "snowflake_ice_pick"
long_description = file: README.md
long_description_content_type = text/x-md



projec_urls = 
    Source=https://github.com/pytest-dev/pytest
    Tracker=https://github.com/pytest-dev/pytest/issues


[options]
package_dir= 
    =src
packages = find:

[options.packages.find]
where=src

[options.entry_points]



[options.extras_require]



[options.package_data]



[build_sphinx]




[check-manifest]




[devpi:upload]
formats = sdist.tgz,bdist_wheel




[mypy]
mypy_path = src
check_untyped_defs = True
disallow_any_generics = True
ignore_missing_imports = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
no_implicit_reexport = True






